began building dashboard

--- a/p1/dashboard-front-end-1/src/tailwind.css
+++ b/p1/dashboard-front-end-1/src/tailwind.css
@@ -1,1 +1,12 @@
-@import "tailwindcss"
+@import "tailwindcss";
+
+@layer base {
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
+    body {
+        @apply bg-gray-900;
+    }
+}
